--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-app",
-  "version": "0.1.0",
+  "name": "periodic-ify",
+  "version": "1.0.0",
+  "homepage": "https://gyryk.github.io/periodicify",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
